--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 
             <section id="diagram" class="diagram-container fade-in">
                  <h2>The Avalanche Philosophy Diagram</h2>
-                <img src="https://i.imgur.com/3Z6xXo5.png" alt="Diagram of The Avalanche Philosophy showing two cycles of Grind, Rise, Saturation, and Re-Grind." onerror="this.onerror=null;this.src='https://placehold.co/800x450/ecf0f1/2c3e50?text=Diagram+Not+Found';">
+                <img src="avalanche_blog.jpg" alt="Diagram of The Avalanche Philosophy showing two cycles of Grind, Rise, Saturation, and Re-Grind." onerror="this.onerror=null;this.src='https://placehold.co/800x450/ecf0f1/2c3e50?text=Diagram+Not+Found';">
             </section>
 
             <section id="stage-1" class="fade-in">
